--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,18 @@
     --green: #2FC022;
 }
 
+* {
+    font-family: 'Gotham';
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    width: 100%;
+    height: 100%;
+}
+
 @font-face {
     font-family: 'Gotham';
     src: url('assets/fonts/Gotham/gotham-light.woff2') format('truetype');
