feat: create form structure and style

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <div class="logo-container">
-    <img src="/assets/images/svg/logo.svg" alt="" />
+    <img src="/assets/images/svg/logo.svg" alt="logo smart fit" />
   </div>
   <div class="text-container">
       <div class="heading">
