--- a/src/app/components/forms/forms.component.html
+++ b/src/app/components/forms/forms.component.html
@@ -1,4 +1,4 @@
-<form class="form-group">
+<form class="form-group" [formGroup]="formGroup">
     <div class='form-icon'>
         <img src="/assets/images/png/icon-hour.png" alt="icon hour">
         Horário
@@ -6,28 +6,30 @@
     <h3>Qual horário você quer treinar</h3>
 
     <div class="radio-wrapper">
-        <input type="radio" name="morning" value="morning" id="">
+        <input type="radio" name="hour" value="morning" id="" formControlName="hour">
         <label for="morning">Manhã</label>
         <span>06:00 as 12h</span>
     </div>
     <div class="radio-wrapper">
-        <input type="radio" name="afternoon" value="afternoon" id="">
+        <input type="radio" name="hour" value="afternoon" id="" formControlName="hour">
         <label for="afternoon">Tarde</label>
         <span>12:01 as 18h</span>
     </div>
     <div class="radio-wrapper">
-        <input type="radio" name="night" value="night" id="">
+        <input type="radio" name="hour" value="night" id="" formControlName="hour">
         <label for="night">Noite</label>
         <span>18:01 as 23h</span>
     </div>
 
     <div class="checkbox-wrapper">
-        <input type="checkbox" name="show-closed">
-        <label for="">Exibir unidades fechadas</label>
+        <div class="checkbox">
+            <input type="checkbox" name="showClosed" formControlName="showClosed">
+            <label for="showClosed">Exibir unidades fechadas</label>
+        </div>
         <span>Resultados encontrados: {{ results.length }}</span>
     </div>
     <div class="btn-wrapper">
-        <button class='btn btn-primary'>Encontar unidade</button>
-        <button class='btn btn-secondary'>Limpar</button>
+        <button class='btn btn-primary' (click)="onSubmit()">Encontar unidade</button>
+        <button class='btn btn-secondary' (click)="onClear()">Limpar</button>
     </div>
 </form>
