--- a/src/app/components/forms/forms.component.scss
+++ b/src/app/components/forms/forms.component.scss
@@ -57,21 +57,20 @@
         width: 100%;
         color: var(--light-grey);
         margin: 32px 0;
-        position: relative;
         display: flex;
-        justify-content: flex-start;
-        align-items: center;
+        flex-direction: column;
+        justify-content: center;
         gap: 8px;
-
-        span {
-            position: absolute;
-            right: 0;
+        
+        .checkbox input{
+            margin-right: 4px;
         }
     }
 
     .btn-wrapper {
         width: 100%;
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
         gap: 12px;
@@ -97,4 +96,18 @@
             border: 2px solid var(--light-text);
         }
     }
+}
+
+@media (min-width: 768px) {
+    .form-group{
+        .btn-wrapper {
+        flex-direction: row;
+        }
+
+        .checkbox-wrapper {
+            justify-content: space-between;
+            flex-direction: row;
+        }
+    }
+
 }
