--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<app-header></app-header>
-<app-forms></app-forms>
+
+<div class="app-container">
+    <app-header></app-header>
+    <app-forms></app-forms>
+</div>
 
 <router-outlet />
