--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 
 <div class="app-container">
     <app-header></app-header>
-    <app-forms></app-forms>
+    <app-forms (submitEvent)="onSubmit()"></app-forms>
+    <app-cards-list *ngIf="(showList | async)" [unitsList]="unitsList"></app-cards-list>
 </div>
 
 <router-outlet />
+ 
